--- a/app/views/docs/index/orbit.html.erb
+++ b/app/views/docs/index/orbit.html.erb
@@ -20,11 +20,18 @@
 				<h5>Setting Up Your Slider</h5>
 				<p>Your Orbit slider is simply a <code>div</code> with a unique ID. For our examples we'll use <code>&lt;div id="featured"&gt;</code>, an example of which you can see above. The markup looks like this:</p>
 
-				<script src="https://gist.github.com/2960362.js?file=f3-orbit-markup.html"></script>
+				<pre><code data-language="html"><div id="featured">
+  <img src="../images/orbit-demo/demo1.jpg" />
+  <img src="../images/orbit-demo/demo2.jpg" />
+  <img src="../images/orbit-demo/demo3.jpg" />
+</div></code></pre>
 
 				<h5>Activating Orbit</h5>
 				<p>With your <code>#featured</code> element in place, we just need to call Orbit. <strong>Remember:</strong> your call to Orbit needs to come <em>after</em> you've included jQuery and foundation.js. By default, those are at the end of your document, so this code snippet should come at the very end:</p>
-				<script src="https://gist.github.com/2960375.js?file=f3-orbit-call.html"></script>
+				<pre><code data-language="javascript">$(window).load(function() {
+       $('#featured').orbit();
+   });
+</code></pre>
 
 				<p>That's all you need to trigger Orbit on a series of images. It includes the timer element, and the left and right hand paddles.</p>
 
@@ -33,7 +40,26 @@
 				<h4>Options</h4>
 				<p>Orbit has a number of options available, which you can specify when you call <code>.orbit()</code>. In the example above, we kept all of the default values, but you can optionally use any of these options:</p>
 
-				<script src="https://gist.github.com/2960382.js?file=f3-orbit-options.js"></script>
+				<pre><code data-language="javascript">$('#featured').orbit({
+   animation: 'fade',                  // fade, horizontal-slide, vertical-slide, horizontal-push
+   animationSpeed: 800,                // how fast animtions are
+   timer: true, 			 // true or false to have the timer
+   resetTimerOnClick: false,           // true resets the timer instead of pausing slideshow progress
+   advanceSpeed: 4000, 		 // if timer is enabled, time between transitions 
+   pauseOnHover: false, 		 // if you hover pauses the slider
+   startClockOnMouseOut: false, 	 // if clock should start on MouseOut
+   startClockOnMouseOutAfter: 1000, 	 // how long after MouseOut should the timer start again
+   directionalNav: true, 		 // manual advancing directional navs
+   captions: true, 			 // do you want captions?
+   captionAnimation: 'fade', 		 // fade, slideOpen, none
+   captionAnimationSpeed: 800, 	 // if so how quickly should they animate in
+   bullets: false,			 // true or false to activate the bullet navigation
+   bulletThumbs: false,		 // thumbnails for the bullets
+   bulletThumbLocation: '',		 // location from this file where thumbs will be
+   afterSlideChange: function(){}, 	 // empty function 
+   fluid: true                         // or set a aspect ratio for content slides (ex: '4x3') 
+});
+</code></pre>
 
 				<hr />
 
@@ -53,13 +79,34 @@
           <div>
             <h4>What? You didn't click it?</h4>
             <p>We'll give you the benefit of the doubt. Maybe you did, and now you're back!</p>
+            <p>We'll give you the benefit of the doubt. Maybe you did, and now you're back!</p>
+            <p>We'll give you the benefit of the doubt. Maybe you did, and now you're back!</p>
+            <p>We'll give you the benefit of the doubt. Maybe you did, and now you're back!</p>
+            <p>We'll give you the benefit of the doubt. Maybe you did, and now you're back!</p>
+            <p>We'll give you the benefit of the doubt. Maybe you did, and now you're back!</p>
           </div>
         </div>
 
         <p>
-          <script src="https://gist.github.com/2960442.js?file=f3-orbit-content-markup.html"></script>
+          <pre><code data-language="html"><div id="featuredContent">
+  <div>
+    <h4>This is a content slider.</h4>
+    <p>Each slide holds arbitrary content, like text or actions.</p>
+  </div>
+  <div>
+    <h4>We can include text and buttons, like this!</h4>
+    <p>We take no responsibility for what happens if you click this button.</p>
+    <p><a href="http://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button" target="_blank">Rock My World!</a></p>
+  </div>
+  <div>
+    <h4>What? You didn't click it?</h4>
+    <p>We'll give you the benefit of the doubt. Maybe you did, and now you're back!</p>
+  </div>
+</div></code></pre>
 
-          <script src="https://gist.github.com/2960437.js?file=f3-orbit-content.html"></script>
+          <pre><code data-language="javascript">$(window).load(function() {
+   $('#featuredContent').orbit({ fluid: '16x6' });
+});</code></pre>
         </p>
 
         <p><strong>Note:</strong> We put some simple styles on our content slider, notably a background and padding on the <code>div</code> elements. Orbit stacks your slides, so transparent slides will will be visible on top of each other.</p>
@@ -71,7 +118,11 @@
 
         <p>For example, if we want Orbit to load a simple light grey screen with a spinner, the CSS would look like this:</p>
 
-        <script src="https://gist.github.com/2960465.js?file=f3-orbit-loading.css"></script>
+        <pre><code data-language="css">#featured { background: url(spinner.gif) center center #f4f4f4; height: 300px; }
+#featured img { display: none; }
+
+#featured.orbit { background: none; }
+#featured.orbit img { display: block; }</code></pre>
 
         <p>We hide the images by default, and give the <code>#featured</code> block a fixed height and background with a spinner. Once Orbit loads the images are displayed and we remove that background.</p>
 
@@ -87,6 +138,9 @@
 	<%= render "sidebar" %>
 </div>
 
-<script type="text/javascript" charset="utf-8">
-  $("#featured").orbit();
+<script type="text/javascript">
+  $(window).load(function() {
+    $("#featured").orbit();
+    $('#featuredContent').orbit({ fluid: '2x1' });
+  });
 </script>
