--- a/app/views/index/home.html.erb
+++ b/app/views/index/home.html.erb
@@ -58,7 +58,7 @@
 
         <a href="github-mac://openRepo/https://github.com/zurb/foundation" class="button secondary">Clone Now</a>
 
-        <img src="images/yeti9000.png" />
+        <%= image_tag "yeti9000.png" %>
       </div>
     </div>
 
@@ -106,7 +106,7 @@
   <div class="row">
     <div class="six columns">
       <div class="case-study">
-        <a href="case-flite.php"><img src="images/case-study-flite.png" /></a>
+        <a href="case-flite.php"><%= image_tag "case-study-flite.png" %></a>
 
         <h4><a href="case-flite.php">Flite</a></h4>
         <p>When online advertising tech firm Flite needed to do a redesign of its website, it knew that it had to work on any device, not just desktops.<br /><a href="case-flite.php">Read the case study &rarr;</a></p>
@@ -114,7 +114,7 @@
     </div>
     <div class="six columns">
       <div class="case-study">
-        <a href="case-swizzle.php"><img src="images/case-study-swizzle.png" /></a>
+        <a href="case-swizzle.php"><%= image_tag "case-study-swizzle.png" %></a>
 
         <h4><a href="case-swizzle.php">Swizzle</a></h4>
         <p>Online service and design agency Swizzle built this site just a month after the release of Foundation, and it's beautifully responsive.<br /><a href="case-swizzle.php">Read the case study &rarr;</a></p>
@@ -125,7 +125,7 @@
   <div class="row">
     <div class="six columns">
       <div class="case-study">
-        <a href="case-soapbox.php"><img src="images/case-study-soapbox.png" /></a>
+        <a href="case-soapbox.php"><%= image_tag "case-study-soapbox.png" %></a>
 
         <h4><a href="case-soapbox.php">ZURBsoapbox</a></h4>
         <p>One of the first sites built with Foundation, this site helps visitors to ZURB's speaking series learn, listen, and RSVP to events.<br /><a href="case-soapbox.php">Read the case study &rarr;</a></p>
@@ -133,7 +133,7 @@
     </div>
     <div class="six columns">
       <div class="case-study">
-        <a href="case-reel.php"><img src="images/case-study-reel.png" /></a>
+        <a href="case-reel.php"><%= image_tag "case-study-reel.png" %></a>
 
         <h4><a href="case-reel.php">Reel</a></h4>
         <p>A presentation hosting Web app built by ZURB, Foundation not only drives the entire app UI, but also drives its embeddable presentations.<br /><a href="case-reel.php">Read the case study &rarr;</a></p>
@@ -149,16 +149,16 @@
       <a href="mailto:foundation@zurb.com" class="top-right">Is your site using Foundation? Let us know!</a>
 
       <ul class="block-grid five-up">
-        <li><a href="http://projection.pixar.com/" id="usingPixar" target="_blank"><img src="images/usingPixar.png" /></a></li>
-        <li><a href="http://codesign.lanl.gov/" id="usingLosAlamos" target="_blank"><img src="images/usingLosAlamos.png" /></a></li>
-        <li><a href="http://www.flite.com/" id="usingFlite" target="_blank"><img src="images/usingFlite.png" /></a></li>
-        <li><a href="http://www.zurb.com" id="usingZURB" target="_blank"><img src="images/usingZURB.png" /></a></li>
-        <li><a href="http://www.getfelix.com/" id="usingFelix" target="_blank"><img src="images/usingFelix.png" /></a></li>
-        <li><a href="https://webfwd.org/" id="usingWebFWD" target="_blank"><img src="images/usingMozilla.png" /></a></li>
-        <li><a href="http://reelapp.com/" id="usingReel" target="_blank"><img src="images/usingReel.png" /></a></li>
-        <li><a href="http://spurapp.com/" id="usingSpur" target="_blank"><img src="images/usingSpur.png" /></a></li>
-        <li><a href="http://zurb.com/soapbox/" id="usingSoapbox" target="_blank"><img src="images/usingSoapbox.png" /></a></li>
-        <li><a href="http://axeapp.com/" id="usingAxe" target="_blank"><img src="images/usingAxe.png" /></a></li>
+        <li><a href="http://projection.pixar.com/" id="usingPixar" target="_blank"><%= image_tag "usingPixar.png" %></a></li>
+        <li><a href="http://codesign.lanl.gov/" id="usingLosAlamos" target="_blank"><%= image_tag "usingLosAlamos.png" %></a></li>
+        <li><a href="http://www.flite.com/" id="usingFlite" target="_blank"><%= image_tag "usingFlite.png" %></a></li>
+        <li><a href="http://www.zurb.com" id="usingZURB" target="_blank"><%= image_tag "usingZURB.png" %></a></li>
+        <li><a href="http://www.getfelix.com/" id="usingFelix" target="_blank"><%= image_tag "usingFelix.png" %></a></li>
+        <li><a href="https://webfwd.org/" id="usingWebFWD" target="_blank"><%= image_tag "usingMozilla.png" %></a></li>
+        <li><a href="http://reelapp.com/" id="usingReel" target="_blank"><%= image_tag "usingReel.png" %></a></li>
+        <li><a href="http://spurapp.com/" id="usingSpur" target="_blank"><%= image_tag "usingSpur.png" %></a></li>
+        <li><a href="http://zurb.com/soapbox/" id="usingSoapbox" target="_blank"><%= image_tag "usingSoapbox.png" %></a></li>
+        <li><a href="http://axeapp.com/" id="usingAxe" target="_blank"><%= image_tag "usingAxe.png" %></a></li>
       </ul>
     </div>
   </div>
