added case study pages

--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -2,7 +2,7 @@
 <div class="container top-bar home-border">
   <div class="attached">
     <div class="name" onclick="void(0);">
-      <span><a href="http://foundation.zurb.com">Foundation</a> <a href="#" class="toggle-nav"></a></span>
+      <span><%= link_to "Foundation", root_path %> <a href="#" class="toggle-nav"></a></span>
 		</div>
 
 		<ul class="right">
