--- a/app/assets/stylesheets/docs.scss
+++ b/app/assets/stylesheets/docs.scss
@@ -8,7 +8,7 @@
 ----------------------------------------- */
 
 code.rainbow {font-weight:300;}
-pre {display:none;}
+pre {display:none; overflow-x:auto;}
 
 body { padding-bottom: 60px; }
 .row { width: 1440px; }
@@ -50,7 +50,6 @@ header .subheader { position: relative; top: -18px; }
 
 #featuredContent { background: #f4f4f4; }
 #featuredContent div { background: #f4f4f4; padding: 30px 60px; }
-
 /* Top bar */
 .container.top-bar { margin-bottom: 0; }
 
