--- a/app/views/case_studies/index/flite.html.erb
+++ b/app/views/case_studies/index/flite.html.erb
@@ -25,7 +25,7 @@
           <p>Andy had Foundation up and running in a day. Then it was just a matter of building out the entire site, which took about another two weeks.</p>
         </div>
         <div class="six columns">
-          <img src="images/case-flite-1.jpg" id="sideDeviceDesktop" />
+          <%= image_tag "case-flite-1.jpg", :id => "sideDeviceDesktop" %>
         </div>
       </div>
 
@@ -35,7 +35,7 @@
           <p>Flite started the design work on the site before deciding to use Foundation. The company had already solidified the design for their site. However, they didn't have much trouble backing the design into Foundation's framework. Not only that but Flite was able to integrate Foundation into its Sass+Compass workflow. George told us that was a real boon for the team.</p>
         </div>
         <div class="six columns pull-six">
-          <img src="images/case-flite-2.png" />
+          <%= image_tag "case-flite-2.png" %>
         </div>
       </div>
 
