--- a/app/views/case_studies/index/reel.html.erb
+++ b/app/views/case_studies/index/reel.html.erb
@@ -27,7 +27,7 @@
 
         </div>
         <div class="six columns">
-          <img src="images/case-reel-1.jpg" id="sideDeviceDesktop" />
+          <%= image_tag "case-reel-1.jpg", :id => "sideDeviceDesktop" %>
         </div>
       </div>
 
