--- a/app/views/case_studies/index/soapbox.html.erb
+++ b/app/views/case_studies/index/soapbox.html.erb
@@ -24,7 +24,7 @@
           <p>Thanks to Foundation's <a href="docs/grid.php">built-in responsive grid</a>, as soon as we put together the desktop prototype we already had a working mobile prototype, ready for tablets, phones and other devices.</p>
         </div>
         <div class="six columns">
-          <img src="images/case-soapbox-1.jpg" id="sideDeviceDesktop" />
+          <%= image_tag "case-soapbox-1.jpg", :id => "sideDeviceDesktop" %>
         </div>
       </div>
 
@@ -37,7 +37,7 @@
           <p>We practice what we preach, and we're always iterating on Foundation-based sites. Our next step is to implement a more mobile-friendly image solution, so devices don't have to load quite as much data. There's a lot of good work going on in this area, but also a lot to figure out.</p>
         </div>
         <div class="six columns pull-six">
-          <img src="images/case-soapbox-2.jpg" />
+          <%= image_tag "case-soapbox-2.jpg" %>
         </div>
       </div>
 
