--- a/app/views/case_studies/index/swizzle.html.erb
+++ b/app/views/case_studies/index/swizzle.html.erb
@@ -24,7 +24,7 @@
           <p>Using Foundation, we were able to quickly implement the desktop and mobile site. It was easy to setup the shell how we wanted because the overall width is customizable, and it was fun to experiment with different layouts on the fly using the built-in responsive grid.</p>
         </div>
         <div class="six columns">
-          <img src="images/case-swizzle-1.jpg" id="sideDeviceiPad" />
+          <%= image_tag "case-swizzle-1.jpg", :id => "sideDeviceiPad" %>
         </div>
       </div>
 
@@ -36,7 +36,7 @@
           <p>What's next is to switch our client portal over to using Foundation. We've got lots of forms in our client portal, and until now they've been a real headache to style. We're also going to use <a href="docs/reveal.php">Reveal</a> for some great interactive features.</p>
         </div>
         <div class="six columns pull-six">
-          <img src="images/case-swizzle-2.jpg" />
+          <%= image_tag "case-swizzle-2.jpg" %>
         </div>
       </div>
 
