--- a/app/views/docs/index/navigation.html.erb
+++ b/app/views/docs/index/navigation.html.erb
@@ -61,7 +61,7 @@
                   <p>This is example text. This is example text. This is example text. This is example text. This is example text. This is example text. This is example text. This is example text.</p>
                 </div>
                 <div class="four columns">
-                  <img src="http://placehold.it/200x250" />
+                  <%= image_tag "http://placehold.it/200x250" %>
                 </div>
               </div>
             </div>
@@ -130,7 +130,7 @@
         <p>This is example text.</p>
       </div>
       <div class="four columns">
-        <img src="http://placehold.it/200x250" />
+        <%= image_tag "http://placehold.it/200x250" %>
       </div>
     </div>
   </div>
@@ -146,7 +146,7 @@
         <p>This is example text and will expand up, not down.</p>
       </div>
       <div class="four columns">
-        <img src="http://placehold.it/200x250" />
+        <%= image_tag "http://placehold.it/200x250" %>
       </div>
     </div>
   </div>
