--- a/app/views/docs/index/orbit.html.erb
+++ b/app/views/docs/index/orbit.html.erb
@@ -21,9 +21,9 @@
 				<p>Your Orbit slider is simply a <code>div</code> with a unique ID. For our examples we'll use <code>&lt;div id="featured"&gt;</code>, an example of which you can see above. The markup looks like this:</p>
 
 				<pre><code data-language="html"><div id="featured">
-  <img src="../images/orbit-demo/demo1.jpg" />
-  <img src="../images/orbit-demo/demo2.jpg" />
-  <img src="../images/orbit-demo/demo3.jpg" />
+  <%= image_tag "../images/orbit-demo/demo1.jpg" %>
+  <%= image_tag "../images/orbit-demo/demo2.jpg" %>
+  <%= image_tag "../images/orbit-demo/demo3.jpg" %>
 </div></code></pre>
 
 				<h5>Activating Orbit</h5>
