--- a/app/views/features/index/mobile.html.erb
+++ b/app/views/features/index/mobile.html.erb
@@ -13,7 +13,7 @@
 
     <div class="ten columns push-two">
       <p class="show-for-small"><a href="index.php">&larr; Back to Home</a></p>
-    	<img src="images/feature-mobile-1.jpg">
+    	<%= image_tag "feature-mobile-1.jpg" %>
       <h4>Build for the future.</h4>
       <p>Mobile devices are already eclipsing desktops in adoption and internet use &mdash; that's why Foundation was built from the ground up to support any kind of device, any size screen, with any resolution. You can get going quickly by building once for all devices, or you can create a site tailored to a specific experience. We've even included CSS styles to hide and show elements on different device types, so you can easily turn pieces on and off for each experience.</p>
 
@@ -21,19 +21,19 @@
       <div class="row">
       	<div class="four columns">
       	  <a href="mobile-example1.php" target="_blank">
-      	    <img src="images/feature-mobile-2.png">
+      	    <%= image_tag "feature-mobile-2.png" %>
       	    <p>Mobile Grid</p>
       	  </a>
       	</div>
       	<div class="four columns">
       	  <a href="mobile-example2.php" target="_blank">
-      	    <img src="images/feature-mobile-3.png">
+      	    <%= image_tag "feature-mobile-3.png" %>
       	    <p>Mobile Navigation</p>
       	  </a>
       	</div>
       	<div class="four columns">
       	  <a href="mobile-example3.php" target="_blank">
-      	    <img src="images/feature-mobile-4.png">
+      	    <%= image_tag "feature-mobile-4.png" %>
       	    <p>Mobile Visibility</p>
       	  </a>
       	</div>
