--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,3 +1,9 @@
+<div class="row">
+  <div class="twelve columns">
+    <hr>
+  </div>
+</div>
+
 <footer class="row">
   <section class="five columns">
     <h6><strong>Made by ZURB</strong></h6>
