--- a/app/views/case_studies/index/zurbjobs.html.erb
+++ b/app/views/case_studies/index/zurbjobs.html.erb
@@ -26,7 +26,7 @@
 
         </div>
         <div class="six columns">
-          <img src="images/case-zurbjobs-1.jpg" id="sideDeviceDesktop" />
+          <%= image_tag "case-zurbjobs-1.jpg", :id => "sideDeviceDesktop" %>
         </div>
       </div>
 
