--- a/app/views/features/index/prototyping.html.erb
+++ b/app/views/features/index/prototyping.html.erb
@@ -13,7 +13,7 @@
 
       <div class="ten columns push-two">
         <p class="show-for-small"><a href="index.php">&larr; Back to Home</a></p>
-      	<img src="images/feature-prototyping-1.jpg">
+      	<%= image_tag "feature-prototyping-1.jpg" %>
         <h4>Mockups don't tell a story. Build a prototype in no time.</h4>
         <p>The difference between a good site and a great site is iteration &mdash; building something, playing with it, refining it. In Foundation we've included dozens of styles to help you quickly prototype a site; multiple button sizes and styles, tabs, custom form elements, modal dialogs, image sliders and a lot more. All of the prototype elements are production-ready code, and easy to style up. <a href="docs/elements.php">UI Docs &rarr;</a></p>
 
@@ -21,20 +21,20 @@
         <div class="row">
         	<div class="four columns">
         	  <a href="http://zurb.net/zurbwired2011/projects/zurbwired2011/frame/prototype/public/" target="_blank">
-        	    <img src="images/feature-prototyping-2.png">
+        	    <%= image_tag "feature-prototyping-2.png" %>
         	    <p>Rebekah Children's Services
 Wireframe Prototype</p>
         	  </a>
         	</div>
         	<div class="four columns">
         	  <a href="prototype-example2.php" target="_blank">
-        	    <img src="images/feature-prototyping-3.png">
+        	    <%= image_tag "feature-prototyping-3.png" %>
         	    <p>Games Site</p>
         	  </a>
         	</div>
         	<div class="four columns">
         	  <a href="prototype-example3.php" target="_blank">
-        	    <img src="images/feature-prototyping-4.png">
+        	    <%= image_tag "feature-prototyping-4.png" %>
         	    <p>Social App</p>
         	  </a>
         	</div>
